Added models and training scripts

--- a/models/training.ipynb
+++ b/models/training.ipynb
@@ -219,10 +219,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "dcd8d421",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "12.4\n",
+      "90100\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "print(torch.cuda.is_available())\n",
@@ -684,8 +694,8 @@
     "    dataset = ConeClusterDataset(train_files, num_points=config.num_points)\n",
     "    labels = np.array([dataset[i][1].item() for i in range(len(dataset))])\n",
     "\n",
-    "    train_idx, temp_idx = train_test_split(np.arange(len(labels)), test_size=0.2, stratify=labels, random_state=599) #TODO fix\n",
-    "    val_idx, test_idx = train_test_split(temp_idx, test_size=0.5, stratify=labels[temp_idx], random_state=599) #TODO fix\n",
+    "    train_idx, temp_idx = train_test_split(np.arange(len(labels)), test_size=0.2, stratify=labels, random_state=599) \n",
+    "    val_idx, test_idx = train_test_split(temp_idx, test_size=0.5, stratify=labels[temp_idx], random_state=599)\n",
     "\n",
     "    train_loader = DataLoader(Subset(dataset, train_idx), batch_size=config.batch_size, shuffle=True)\n",
     "    val_loader   = DataLoader(Subset(dataset, val_idx), batch_size=config.batch_size, shuffle=False)\n",
